Probando los estilos

--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -1,2 +1,4 @@
-h2 Register 
-h3 #{title}
+extends ../layout/index.pug
+block content
+  div 
+    h1(class='text-center text-2xl font-extrabold') Crear cuenta
